Fixed alignment and deleted the div in App.js

--- a/src/Paycheck_component/header.css
+++ b/src/Paycheck_component/header.css
@@ -1,3 +1,6 @@
+.main {
+  text-align: center;
+}
 .selectBox {
   margin-left: 10px;
 }
